--- a/CheatSheet.org
+++ b/CheatSheet.org
@@ -28,16 +28,21 @@
 - To find out more about ~name~ execute ~(describe-symbol 'name)~!
   * After the closing parens invoke ~C-x C-e~ to evaluate.
 - To find out more about a key press, execute ~C-h k~ then the key press.
+- To find out more about the current mode you're in, execute ~C-h m~ or
+  ~describe-mode~. Essentially a comprehensive yet terse reference is provided.
 :Examples:
 (describe-symbol 'just-one-space)
 (describe-symbol 'eldoc-mode)
 (describe-symbol 'describe-symbol)
 :End:
 
+
+
 * Functions
 
 + Function invocation: ~(f x₀ x₁ … xₙ)~. E.g., ~(+ 3 4)~ or ~(message "hello")~.
   - After the closing parens invoke ~C-x C-e~ to execute them.
+  - /Warning!/ Arguments are evaluated *before* the function is executed.
   - Only prefix invocations means we can use ~-,+,*~ in /names/
     since ~(f+*- a b)~ is parsed as applying function ~f+*-~ to arguments ~a, b~.
     # Having infix notation, as in “a - b”, is what renders names “a-b”
@@ -69,7 +74,10 @@
 ;; (my-func 1 2) ;; invalid!
 #+END_SRC
   The last one is invalid since ~(f x0 … xk)~ is only meaningful for functions
-  ~f~ formed using ~defun~.
+  ~f~ formed using ~defun~. More honestly, Elisp has distinct namespaces for functions and variables.
+
+  Indeed, ~(defun f (x₀ … xₖ) body) ≈ (fset 'f (lambda (x₀ … xₖ) body))~.
+  - Using ~fset~, with quoted name, does not require using ~funcall~.
 
 + Recursion and IO:
    ~(defun sum (n) (if (<= n 0) 0 (+ n (sum (- n 1)))))~
@@ -86,11 +94,13 @@
 * spacing newpage                                                    :ignore:
 \newpage
 * Variables
+# (describe-symbol 'make-variable-buffer-local)
+
 + Global Variables, Create & Update: ~(setq name value)~.
   - Generally: ~(setq name₀ value₀ ⋯ nameₖ valueₖ)~.
   
-  Use ~devfar~ for /constant/ global variables, which
-  permit a documentation string.
+  Use ~devfar~ for global variables since it
+  permits a documentation string --but updates must be performed with ~setq.
   E.g., ~(defvar my-x 14 "my cool thing")~.
 
   :TryItOut:
@@ -102,23 +112,40 @@ my-x ;; ⇒ 14
 
 my-x ;; ⇒ 14 still
 
+(setq my-x 16)
+my-x ;; ⇒ now 16
+
 (describe-symbol 'my-x)
+
+
+  :End:
+
+  :WhatAboutSet:
+  (setq x y) ≈ (set (quote x) y)
+
+  Variables are assigned with ~set~, which takes a quoted identifier, so that it's not evaluated,
+  and a value to associate to that variable. “set quoted”, ~setq~, avoids the hassle of quoting the name.
+
+  Of course functions evaluate their arguments, so ~setq~ couldn't possibly be a function.
+  It's an uber-function, called a ‘macro’, that doesn't evaluate its arguments before executing.
   :End:
 
 + Local Scope: ~(let ((name₀ val₀) … (nameₖ valₖ)) bodyBlock)~.
   - ~let*~ permits later bindings to refer to earlier ones.
+  - The simpler ~let~ indicates to the reader that there are no dependencies between the variables.
+   # let ≈ parallel; let* ≈ sequential. 
 
 + Elisp is dynamically scoped: The caller's stack is accessible by default!
   #+BEGIN_SRC emacs-lisp
 (defun woah () 
   "If any caller has a local ‘work’, they're in for a nasty bug
-   from me!"
-  (setq work 666))
+   from me! Moreover, they better have ‘a’ defined in scope!"
+  (setq work (* a 111))) ;; Benefit: Variable-based scoped configuration.
 
 (defun add-one (x)
   "Just adding one to input, innocently calling library method ‘woah’."
-  (let ((work (+ 1 x)))
-    (woah) ;; May change ‘work’!
+  (let ((work (+ 1 x)) (a 6))
+    (woah) ;; May change ‘work’ or access ‘a’!
     work
   )
 )
@@ -138,7 +165,8 @@ Useful for loops, among other things:
     whereas ~*x~ is the value.
   - The quote simply forbids evaluation; it means /take it literally as you see it/
     rather than looking up the definition and evaluating.
-#+BEGIN_SRC elisp
+    :TryItOut:
+    #+BEGIN_SRC elisp
 (setq this 'hello)
 (setq that this)
 
@@ -147,14 +175,28 @@ Useful for loops, among other things:
 ;;  that  → hello
 ;; 'that  → that
 #+END_SRC 
+    :End:
+  - Note: ~'x ≈ (quote x)~.
 
-Note: ~'x ≈ (quote x)~.
+  Akin to English, quoting a word refers to the word and not what it denotes.
+
+  ( This lets us treat /code/ as /data/! E.g., ~'(+ 1 2)~ evaluates to ~(+ 1 2)~, a function call,
+    not the value ~3~! Another example, ~*~ is code but ~'*~
+    is data, and so ~(funcall '* 2 4)~ yields 8. )
+
++ /Atoms/ are the simplest objects in Elisp: They evaluate to themselves.
+  - E.g., ~5, "a", 2.78, 'hello~, lambda's form function literals in that, e.g.,
+    ~(lambda (x) x)~ evaluates to itself.
+
+\room
+
+Elisp expressions are either atoms or function application --nothing else!
 
 * spacing newpage                                                    :ignore:
 \newpage
 * Block of Code
 
-Use the ~progn~ function to evaluate multiple statements. E.g.,
+Use the ~progn~ function to treat multiple expressions as a single expression. E.g.,
 #+BEGIN_SRC elisp
 (progn
   (message "hello")
@@ -238,6 +280,23 @@ Herein, a ‘block’ is a number of sequential expressions which needn't be wra
 
 E.g., ~(cons 1 (cons "a" (cons 'nice nil))) ≈ (list 1 "a" 'nice) ≈ '(1 "a" nice)~.
 
+\room
+Since variables refer to literals and functions have lambdas as literals, we 
+can produce forms that take functions as arguments. E.g., the standard ~mapcar~
+may be construed:
+#+BEGIN_SRC emacs-lisp
+(defun my-mapcar (f xs)
+  (if (null xs) xs
+   (cons (funcall f (car xs)) (my-mapcar f (cdr xs)))
+  )
+)
+
+(my-mapcar (lambda (x) (* 2 x)) '(0 1 2 3 4 5)) ;; ⇒ (0 2 4 6 8 10)
+(my-mapcar 'upcase '("a" "b" "cat")) ;; ⇒ ("A" "B" "CAT")
+
+(describe-symbol 'remove-if-not) ;; “filter” ;-)
+#+END_SRC
+
 * Conditionals
 
 + Booleans: ~nil~, the empty list ~()~, is considered /false/, all else
@@ -276,11 +335,19 @@ E.g., ~(cons 1 (cons "a" (cons 'nice nil))) ≈ (list 1 "a" 'nice) ≈ '(1 "a" n
 * spacing vfill                                                     :ignore:
 \vfill
 
-* Reads
+* Exception Handling
 
-+ [[http://sachachua.com/blog/wp-content/uploads/2013/05/How-to-Learn-Emacs-v2-Large.png][How to Learn Emacs: A Hand-drawn One-pager for Beginners / A visual tutorial]]
-+ [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.html#Top][An Introduction to Programming in Emacs Lisp]]  
-+ [[https://www.gnu.org/software/emacs/manual/html_node/elisp/index.html#Top][GNU Emacs Lisp Reference Manual]]
+We can attempt a dangerous clause and catch a possible exceptional case
+--below we do not do so via ~nil~-- for which we have an associated handler.
+# Which handles how to recover from such exceptional circumstances.
+#+BEGIN_SRC elisp
+(condition-case nil attemptClause (error recoveryBody))
+
+  (ignore-errors attemptBody) 
+≈ (condition-case nil (progn attemptBody) (error nil))
+
+(ignore-errors (+ 1 "nope")) ;; ⇒ nil
+#+END_SRC
 
 * Loops
 
@@ -353,6 +420,77 @@ nearly any kind of imperative loop. E.g., Python-style ‘downfrom’ for-loops
 and Java do-while loops. I personally prefer functional programming, so wont
 look into this much.
 
+* Records
+
+#+BEGIN_SRC elisp
+(defstruct X "Record with fields fᵢ having defaults dᵢ" 
+  (f₀ d₀) ⋯ (fₖ dₖ))
+
+;; Automatic constructor is “make-X” with keyword parameters for 
+;; initialising any subset of the fields!
+;; Hence (expt 2 (1+ k)) kinds of possible constructor combinations!
+(make-X :f₀ val₀ :f₁ val₁ ⋯ :fₖ valₖ) ;; Any, or all, fᵢ may be omitted
+
+;; Automatic runtime predicate for the new type.
+(X-p (make-X)) ;; ⇒ true
+(X-p 'nope)    ;; ⇒ nil
+
+;; Field accessors “X-fᵢ” take an X record and yield its value.
+
+;; Field update: (setf (X-fᵢ x) valᵢ)
+
+(defstruct book
+  title  (year  0))
+
+(setq ladm (make-book :title "Logical Approach to Discrete Math" :year 1993))
+(book-title ladm) ;; ⇒ "Logical Approach to Discrete Math"
+(setf (book-title ladm) "LADM")
+(book-title ladm) ;; ⇒ "LADM"
+#+END_SRC
+
+* Macros
++ Sometimes we don't want eager evaluation; i.e., we do not want to
+  recursively evaluate arguments before running a function.
++ /Macros/ let us manipulate a program's abstract syntax tree, usually
+  by delaying some computations --easy since Elisp lets us treat code as data.
+
+\room
+~`(e₀ e₁ ⋯ eₖ)~ is known as a /quasi-quote/: It produces syntactic data like ~quote~
+  but allows computations to occur --any expression prefixed with a comma as in ~,e₃~--
+  thereby eagerly evaluating some and delaying evaluation of others.
+
+#+BEGIN_SRC elisp
+(defun my/lazy-or (this that)
+  (if this t that))
+
+(my/lazy-or (print "yup") (print "nope")) ;; evaluates & prints both clauses!
+(my/lazy-or t (/ 2 0)) ;; second clause runs needlessly, causing an error.
+
+;; Delay argument evaluation using defmacro
+(defmacro my/lazy-or-2 (this that)
+  `(if ,this t ,that))
+
+(my/lazy-or-2 (print "yup") (print "nope")) ;; just "yup" ;-)
+(my/lazy-or-2 t (/ 2 0)) ;; second clause not evaluated
+
+;; What code is generated by our macro?
+(macroexpand '(my/lazy-or-2 t (/ 2 0))) ;; ⇒ (if t t (/2 0))
+#+END_SRC
+
+We've added new syntax to Elisp!
+
+\room
+The above ‘equations’ can be checked by running ~macroexpand~; \newline e.g.,
+~(when c s₀ ⋯ sₙ) ≈ (if c (progn s₀ ⋯ sₙ) nil)~ holds since
+
+#+BEGIN_SRC elisp
+(macroexpand '(when c s₀ ⋯ sₙ)) ;; ⇒ (if c (progn s₀ ⋯ sₙ))
+#+END_SRC
+
+Woah!
+
+* spacing newpage                                                    :ignore:
+\newpage
 * Hooks
 + We can ‘hook’ methods to run at particular events.
 + Hooks are lists of functions that are, for example, run when a mode is initialised.
@@ -379,6 +517,16 @@ is initialised with org-mode.
 
 + The ~'after-init-hook~ event will run functions after the rest of the init-file has finished loading.
 
+* spacing vfill                                                     :ignore:
+\vfill
+
+* Reads
+
++ [[http://sachachua.com/blog/wp-content/uploads/2013/05/How-to-Learn-Emacs-v2-Large.png][How to Learn Emacs: A Hand-drawn One-pager for Beginners / A visual tutorial]]
++ [[https://emacs-doctor.com/learn-emacs-lisp-in-15-minutes.html][Learn Emacs Lisp in 15 minutes]] --- https://learnxinyminutes.com/
++ [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.html#Top][An Introduction to Programming in Emacs Lisp]]  
++ [[https://www.gnu.org/software/emacs/manual/html_node/elisp/index.html#Top][GNU Emacs Lisp Reference Manual]]
+
 * COMMENT Useful features
 + M-; :: Toggle (un)commenting a region.
 
@@ -387,7 +535,7 @@ is initialised with org-mode.
 C-c C-c: Evaluate src block.
 
 #+NAME: make-readme
-#+BEGIN_SRC emacs-lisp :results none
+#+BEGIN_SRC elisp :results none
 (with-temp-buffer
     (insert 
     "#+EXPORT_FILE_NAME: README.md
