--- a/CheatSheet.org
+++ b/CheatSheet.org
@@ -16,7 +16,7 @@
 #+DESCRIPTION: This document is written by Musa Al-hassy for his learning in the Winter of 2019.
 #+STARTUP: hideblocks
 #+STARTUP: overview
-#+TODO: | spacing
+#+TODO: TODO | spacing
 #+OPTIONS: d:nil
 #+INCLUDE: CheatSheet/CheatSheetSetup.org
 
@@ -97,34 +97,78 @@
   Indeed, ~(defun f (x₀ … xₖ) body) ≈ (fset 'f (lambda (x₀ … xₖ) body))~.
   - Using ~fset~, with quoted name, does not require using ~funcall~.
 
-+ Recursion and IO:
-   ~(defun sum (n) (if (<= n 0) 0 (+ n (sum (- n 1)))))~
-  - Now ~(sum 100) → 5050~.
++ Functions are first-class values; the function represented by the name /f/ is obtained
+  by the call ~#'f~.
 
-+ IO: ~(defun make-sum (n) (interactive "n") (message-box (format "%s" (sum n))))~
-  - The ~interactive~ option means the value of ~n~ is queried to the user; e.g.,
-    enter 100 after executing ~(execute-extended-command "" "make-sum")~
-    or ~M-x make-sum~.
-  - In general ~interactive~ may take no arguments.
-    The benefit is that the function can be executed using ~M-x~,
-    and is then referred to as an interactive function.
-
-* COMMENT TODO optional arguments
-
+  # “lambda” is actually a macro!
+  # (macroexpand '(lambda (x) x))
+  
+  :Try_it_out:
 #+BEGIN_SRC emacs-lisp
-;; Unsupplied optional arguments are bound to ‘nil’.
-(cl-defun f (a b &optional c (d 5))
-   (format "a: %s, b: %s, c: %s, d: %s" a b c d)
-)
+(defun f (x) x) ;; identify function
+(funcall #'f 4)
 
-;; (f 0 1) ⇒ "a: 0, b: 1, c: nil, d: 5"
-;; (f 0 1 'nice) ⇒ "a: 0, b: 1, c: nice, d: 5"
-;; (f 0 1 'nice 'woah) ⇒ "a: 0, b: 1, c: nice, d: woah"
+(defun fmap (h xs) (if xs (cons (funcall h (car xs)) (fmap h (cdr xs))) xs))
+(fmap #'f '(1 2 3))
+(fmap (lambda (x) (* 2 x)) '(1 2 3))
+#+END_SRC
+:End:
+
+#+latex: \vspace{-1em}
+#+BEGIN_SRC emacs-lisp
+;; Recursion with the ‘tri’angle numbers: tri n = Σ [0..n].
+(defun tri (f n) (if (<= n 0) 0 (+ (funcall f n) (tri f (- n 1)))))
+(tri #'identity 100)           ;; ⇒ 5050
+(tri (lambda (x) (/ x 2)) 100) ;; ⇒ 2500
 #+END_SRC
 
+IO: In general ~interactive~ may take no arguments.
+It lets us use ~M-x~ to execute functions;
+here, this results in ~n~ being queried to the user.
+#+BEGIN_SRC emacs-lisp
+(defun double (n) (interactive "n") (message-box (format "%s" (* n 2))))
+#+END_SRC
 
-* spacing newpage                                                    :ignore:
-\newpage
+:Old:
++ Recursion:
+   ~(defun sum (f n) (if (<= n 0) 0 (+ (funcall f n) (sum f (- n 1)))))~
+  - Now ~(sum #'identity 100) → 5050~ and ~(sum (lambda (x) (/ x 2)) 100) → 2500~.
+
++ IO: ~(defun make-sum (n) (interactive "n") (message-box (format "%s" (sum n))))~
+
+   The ~interactive~ option means the value of ~n~ is queried to the user; e.g.,
+enter 100 after executing ~(execute-extended-command "" "make-sum")~ or ~M-x make-sum~.
+
+In general ~interactive~ may take no arguments.
+    The benefit is that the function can be executed using ~M-x~,
+    and is then referred to as an interactive function.
+:End:
+
+We may have positional ~optional~ arguments, or optional but named arguments
+---for which position does not matter.
+Un-supplied optional arguments are bound to ~nil~.
+#
+#+begin_parallel org
+#+BEGIN_SRC emacs-lisp
+(cl-defun f (a &optional b (c 5))
+   (format "%s %s %s" a b c))
+
+(f 'a)       ;; ⇒ "a nil 5"
+(f 'a 'b)    ;; ⇒ "a b 5"
+(f 'a 'b 'c) ;; ⇒ "a b c"
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(cl-defun g (a &key (b 'nice) c)
+   (format "%s %s %s" a b c))
+
+(g 1 :c 3 :b 2) ;; ⇒ "1 2 3"
+(g 1 :c 3)      ;; ⇒ "1 nice 3"
+#+END_SRC
+#+end_parallel
+
+Keywords begin with a colon, ~:k~ is a constant whose value is ~:k~.
+
 * Variables
 # (describe-symbol 'make-variable-buffer-local)
 
@@ -203,12 +247,16 @@ my-x ;; ⇒ now 16
 ;; (add-one 2) ⇒ 666
 #+END_SRC
 
-Useful for loops, among other things:
-| _C_      | _Elisp_      |
-| ~x += y~ | ~(incf x y)~ |
-| ~x--~    | ~(decf x)~   |
-| ~x++~    | ~(incf x)~   |
+* Reads
 
++ [[http://sachachua.com/blog/wp-content/uploads/2013/05/How-to-Learn-Emacs-v2-Large.png][How to Learn Emacs: A Hand-drawn One-pager for Beginners / A visual tutorial]]
++ [[https://emacs-doctor.com/learn-emacs-lisp-in-15-minutes.html][Learn Emacs Lisp in 15 minutes]] --- https://learnxinyminutes.com/
++ [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.html#Top][An Introduction to Programming in Emacs Lisp]]  
++ [[https://www.gnu.org/software/emacs/manual/html_node/elisp/index.html#Top][GNU Emacs Lisp Reference Manual]]
++ [[http://landoflisp.com/][Land of Lisp]]
+    
+* spacing newpage                                                    :ignore:
+\newpage
 * Quotes, Quasi-Quotes, and Unquotes
 
 + Quotes: ~'x~ refers to the /name/ rather than the /value/ of ~x~.
@@ -230,6 +278,16 @@ Useful for loops, among other things:
     :End:
   - Note: ~'x ≈ (quote x)~.
 
+:Try_it_out:
+#+BEGIN_SRC emacs-lisp
+'x ≈ (quote x)
+(equal 'x (quote x)) ;; true
+
+''x ≠ 'x
+(equal 'x ''x) ;; false
+#+END_SRC
+:End:
+    
   Akin to English, quoting a word refers to the word and not what it denotes.
 
   ( This lets us treat /code/ as /data/! E.g., ~'(+ 1 2)~ evaluates to ~(+ 1 2)~, a function call,
@@ -256,42 +314,184 @@ which executes code that is in data form; i.e., is quoted.
 Macros are essentially functions that return sentences, lists, which may happen to
 contain code.
 
-# :Try_it_out:
+#+begin_parallel org
 #+BEGIN_SRC emacs-lisp
-'(I am a sentence)   ;; quote 
-'(+ 1 (+ 1 1))       ;; another sentence; data
+;; Two quotes / sentences / data 
+'(I am a sentence)
+'(+ 1 (+ 1 1))
 
-(setq name "Musa")
-`(Hello ,name It is a pleasure to meet you) ;; Quasi-quote
-`(+ 1 ,(+ 1 1))             ;; sentence with a computation, code, in it
-
-'(+ 1 2)        ;; ⇒ '(+ 1 2)
-(eval '(+ 1 2)) ;; ⇒ 3
+;; Executing data as code ⇒ 3
+(eval '(+ 1 (+ 1 1)))
 #+END_SRC
-# :End:
+
+#+BEGIN_SRC emacs-lisp
+(setq name "Jasim")
+
+;; Quasi-quotes: Sentences with a
+;; computation, code, in them.
+`(Hello ,name and welcome)
+`(+ 1 ,(+ 1 1))           
+#+END_SRC
+#+end_parallel
 
 As the final example shows, Lisp treats data and code interchangeably.
 A language that uses the same structure to store data and code is called ‘homoiconic’.
 
-* Printing
+* spacing COMMENT newpage                                                    :ignore:
+\newpage
+* spacing COMMENT newpage                                                    :ignore:
+\newpage
+* Lists and List-Like Structures
 
-  Lisp makes writing a REPL astonishingly easy: “Loop as follows: Print the result
-  of evaluating what is read at the prompt.”
++ Produce a syntactic, un-evaluated list, we use the single quote:
+  ~'(1 2 3)~.
+
++ Construction: ~(cons 'x₀ '(x₁ … xₖ)) → (x₀ x₁ … xₖ)~.
+
++ Head, or /contents of the address part of the register/:
+   ~(car '(x₀ x₁ … xₖ)) → x₀~.
+
++ Tail, or /contents of the decrement part of the register/:
+   ~(cdr '(x₀ x₁ … xₖ)) → (x₁ … xₖ)~.
+
+# + Deletion: ~(delete e xs)~ yields ~xs~ with all instance of ~e~ removed.
+#  - E.g., ~(delete 1 '(2 1 3 4 1)) → '(2 3 4)~.
+#
+# (describe-symbol 'remove-if-not) ;; “filter” ;-)
+
+E.g., ~(cons 1 (cons "a" (cons 'nice nil))) ≈ (list 1 "a" 'nice) ≈ '(1 "a" nice)~.
+
+\room
+Since variables refer to literals and functions have lambdas as literals, we 
+can produce forms that take functions as arguments. E.g., the standard ~mapcar~
+may be construed:
 #+BEGIN_SRC emacs-lisp
-  (loop (print (eval (read))))  ;; Beautiful (•̀ᴗ•́)و
+(defun my-mapcar (f xs)
+  (if (null xs) xs
+   (cons (funcall f (car xs)) (my-mapcar f (cdr xs)))))
 
-  (defun my-safe-repl () ;; Run repl until user types “quit”.
-   (let ((cmd (read)))
-     (unless (equal cmd 'quit)
-       (print (eval cmd))
-       (my-safe-repl))
-   ))
+(my-mapcar (lambda (x) (* 2 x)) '(0 1 2 3 4 5)) ;; ⇒ (0 2 4 6 8 10)
+(my-mapcar 'upcase '("a" "b" "cat")) ;; ⇒ ("A" "B" "CAT")
 #+END_SRC
 
- + ~loop~ merely loops forever.
-   
-* spacing newpage                                                    :ignore:
-\newpage
+Pairs: ~(x . y) ≈ (cons x y)~.
+
+  An association list, or alist, is a list formed of such pairs.
+  They're useful for any changeable collection of key-value pairs.
+  The ~assoc~ function takes a key and an alist and returns the first pair
+  having that key. In the end, alists are just lists.
+
+  :Try_it_out:  
+#+BEGIN_SRC emacs-lisp
+(setq drinks '( (jasim . coffee) (mary . tea) (jasim . chai) ))
+
+(assoc 'mary drinks) ;; ⇒ (mary . tea)
+(assoc 'jasim drinks) ;; ⇒ (jasim . coffee)
+
+(push '(mary . cola) drinks)
+(assoc 'mary drinks) ;; ⇒ (mary . cola)
+#+END_SRC
+:End:
+
+\room  
+(Rose) Trees in lisp are easily formed as lists of lists where each inner
+   list is of length 2:
+   The first symbol is the parent node and the second is the list of children.
+
+\room   
+Lists are formed by chains of cons cells, so getting and setting are very slow;
+likewise for alists. If performance is desired, one uses arrays and hash tables,
+respectively, instead. In particular, the performance of arrays and hash tables always
+requires a constant amount of time whereas the performance of lists and alists grows in
+proportion with their lengths.
+
+However, the size of an array is fixed ---it cannot change and thus grow--- and hash
+tables have a lookup cost as well as issues with "hash collisions". Their use is worth
+it for large amounts of data, otherwise lists are the way to go.
+
+\room
+An [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Arrays.html][array]] is created like a list but using [only square brackets] with getter ~(aref arr index)~.
+
+A hash table is created with ~(make-hash-table)~ with getter ~(gethash key table)~.
+
+:Try_it_out:
+#+BEGIN_SRC emacs-lisp
+(setq x [0 1 2 nice])
+(aref x 3)
+(aset x 0 'woah)
+
+(setq drinks (make-hash-table))
+(setf (gethash 'mary drinks) 'tea)
+(setf (gethash 'mary drinks) 'chai)
+(gethash 'mary drinks) ;; ⇒ 'chai
+#+END_SRC
+:End:
+
+\room
+What if you look up a key and get ~nil~, is there no value for that key or is the value
+~nil~? ~gethash~ takes a final, optional, argument which is the value to return when the
+key is not found; it is ~nil~ by default.
+
+* Generic Setters
+  
+Since everything is a list in lisp, if ~G~ is a way to get a value from variable ~x~, then ~(setf G e)~ updates ~x~ so that the location ~G~ now refers to element ~e~.
+Hence, once you have a getter ~G~ you freely obtain a setter ~(setf G ⋯)~.
+# G may be arbitrary complex.
+
+# E.g., ~nth~ is a way to get a value from a list; ~(setf (nth 2 x) 'nice)~ changes the list ~x~ at index ~2~ to have value ~'nice~.
+
+#+BEGIN_SRC emacs-lisp
+;; Element update
+(setq x '(0 1 2 3))    ;; x ⇒ '(0 1 2     3)
+(setf (nth 2 x) 'nice) ;; x ⇒ '(0 1 'nice 3)
+
+;; Circular list
+(setq y '(a b c))   ;; y ⇒ '(a b c)
+(setf (cdddr y) y)  ;; y ⇒ '(a b c a b . #2)
+;; “#2” means repeat from index 2.
+(nth 99 y) ;; ⇒ a
+#+END_SRC
+  
+* Records
+
+If we want to keep a list of related properties in a list, then we have to remember
+which position keeps track of which item and may write helper functions to keep track
+of this. Instead we could use a structure.
+:More:
+A Lisp "Structure, record, object" represents objects with properties as in OOP.
+Make a structure like this: (defstruct X (f1 d1) (f2 d2) ... (fn dn)), this creates a record type named X with slots/properties/fields fi having defaults di or nil if di is absent in which case we simply write fi rather than (fi di), moreover it gives the generic constructor (make-X :f1 val1 :f2 val2 ... :fn valn) where any of the fi is optional and assigned nil by default; projection functions X.fi are also provided automatically.
+Printing and reading symmetry works as expected with structures and updates happen with setf as expected.
+:End:
+
+#+BEGIN_SRC elisp
+(defstruct X "Record with fields/slots fᵢ having defaults dᵢ" 
+  (f₀ d₀) ⋯ (fₖ dₖ))
+
+;; Automatic constructor is “make-X” with keyword parameters for 
+;; initialising any subset of the fields!
+;; Hence (expt 2 (1+ k)) kinds of possible constructor combinations!
+(make-X :f₀ val₀ :f₁ val₁ ⋯ :fₖ valₖ) ;; Any, or all, fᵢ may be omitted
+
+;; Automatic runtime predicate for the new type.
+(X-p (make-X)) ;; ⇒ true
+(X-p 'nope)    ;; ⇒ nil
+
+;; Field accessors “X-fᵢ” take an X record and yield its value.
+
+;; Field update: (setf (X-fᵢ x) valᵢ)
+
+(defstruct book
+  title  (year  0))
+
+(setq ladm (make-book :title "Logical Approach to Discrete Math" :year 1993))
+(book-title ladm) ;; ⇒ "Logical Approach to Discrete Math"
+(setf (book-title ladm) "LADM")
+(book-title ladm) ;; ⇒ "LADM"
+#+END_SRC
+
+Advanced OOP constructs can be found within the CLOS, Common Lisp Object System;
+which is also used as a research tool for studying OOP ideas.
+
 * Block of Code
 
 Use the ~progn~ function to treat multiple expressions as a single expression. E.g.,
@@ -373,38 +573,6 @@ Herein, a ‘block’ is a number of sequential expressions which needn't be wra
   (or  s₀ ⋯ sₙ e)  ⇒  when no xᵢ is true, do e
 #+END_SRC
 
-* List Manipulation
-
-+ Produce a syntactic, un-evaluated list, we use the single quote:
-  ~'(1 2 3)~.
-
-+ Construction: ~(cons 'x₀ '(x₁ … xₖ)) → (x₀ x₁ … xₖ)~.
-+ Head, or /contents of the address part of the register/:
-   ~(car '(x₀ x₁ … xₖ)) → x₀~.
-+ Tail, or /contents of the decrement part of the register/:
-   ~(cdr '(x₀ x₁ … xₖ)) → (x₁ … xₖ)~.
-+ Deletion: ~(delete e xs)~ yields ~xs~ with all instance of ~e~ removed.
-  - E.g., ~(delete 1 '(2 1 3 4 1)) → '(2 3 4)~.
-
-E.g., ~(cons 1 (cons "a" (cons 'nice nil))) ≈ (list 1 "a" 'nice) ≈ '(1 "a" nice)~.
-
-\room
-Since variables refer to literals and functions have lambdas as literals, we 
-can produce forms that take functions as arguments. E.g., the standard ~mapcar~
-may be construed:
-#+BEGIN_SRC emacs-lisp
-(defun my-mapcar (f xs)
-  (if (null xs) xs
-   (cons (funcall f (car xs)) (my-mapcar f (cdr xs)))
-  )
-)
-
-(my-mapcar (lambda (x) (* 2 x)) '(0 1 2 3 4 5)) ;; ⇒ (0 2 4 6 8 10)
-(my-mapcar 'upcase '("a" "b" "cat")) ;; ⇒ ("A" "B" "CAT")
-
-(describe-symbol 'remove-if-not) ;; “filter” ;-)
-#+END_SRC
-
 * Conditionals
 
 + Booleans: ~nil~, the empty list ~()~, is considered /false/, all else
@@ -414,26 +582,28 @@ may be construed:
   - Comparisons: As expected; e.g., ~(<= x y)~ denotes /x ≤ y/.
 
 + ~(if condition thenExpr optionalElseBlock)~
-  - Note: ~(if x y) ≈ (if x y nil)~; better: ~(when c thenBlock) ≈ (if c (progn thenBlock))~.
+  - Note: ~(if x y) ≈ (if x y nil)~; \newline better: ~(when c thenBlock) ≈ (if c (progn thenBlock))~.
   - Note the else-clause is a ‘block’: Everything after the then-clause is considered to be part of it.  
   - ~(if xs ⋯)~ means “if xs is nonempty then ⋯” is akin to C style idioms on
     linked lists.
     
-+ Avoid nested if-then-else clauses by using a ~cond~ statement --a (lazy) generalisation of switch statements.  
-   #+BEGIN_SRC emacs-lisp
+Avoid nested if-then-else clauses by using a ~cond~ statement --a (lazy) generalisation
+  of switch statements. Or make choices by comparing against /only/ numbers or symbols
+  ---e.g., not strings!-- with less clutter by using ~case~.
+
+#
+#+begin_parallel org  
+#+BEGIN_SRC emacs-lisp
 (cond
   (test₀
     actionBlock₀)
   (test₁
     actionBlock₁)
   …
-  (t                       ;; optional
+  (t                    ;; optional
     defaultActionBlock))
 #+END_SRC
-   Sequentially evaluate the predicates ~testᵢ~ and perform only the action of the first true test;
-   yield ~nil~ when no tests are true.
-
-+ Make choices by comparing against /only/ numbers or symbols --e.g., not strings!-- with less clutter by using ~case~:
+  \columnbreak
    #+BEGIN_SRC emacs-lisp
 (case 'boberto
   ('bob 3)
@@ -441,7 +611,12 @@ may be construed:
   ('bobert 9001)
   (otherwise "You're a stranger!"))
 #+END_SRC
-   With case you can use either ~t~ or ~otherwise~ for the default case, but it must come last.
+#+end_parallel
+
+   ~cond~ sequentially evaluates the predicates ~testᵢ~ and performs only the action of the
+   first true test; yielding ~nil~ when no tests are true.
+
+#   With ~case~ you can use either ~t~ or ~otherwise~ for the default case, but it must come last.
 
 :Try_it_out:   
 #+BEGIN_SRC emacs-lisp
@@ -452,6 +627,7 @@ may be construed:
 #+END_SRC
 :End:
 
+\room
 Hint: If you write a predicate, think of what else you can return besides ~t~; such as
 a witness to why you're returning truth --all non-nil values denote true after all.
 E.g., ~(member e xs)~ returns the sublist of ~xs~ that begins with ~e~.
@@ -465,6 +641,7 @@ E.g., ~(member e xs)~ returns the sublist of ~xs~ that begins with ~e~.
 
 * spacing vfill                                                     :ignore:
 \vfill
+
 
 * Exception Handling
 
@@ -482,43 +659,41 @@ We can attempt a dangerous clause and catch a possible exceptional case
 
 * Loops
 
-Sum the first ~10~ numbers:
+Let's sum the first ~100~ numbers in 3 ways.
+#
+#+begin_parallel org
 #+BEGIN_SRC elisp
 (let ((n 100) (i 0) (sum 0))
   (while (<= i n)
-    (setq sum (+ sum i))
-    (setq i   (+ i   1))
-  )
-  (message (number-to-string sum))
-)
+    (incf sum i) (incf i))
+    (message (format "sum: %s" sum)))
 #+END_SRC
+\columnbreak
 
-Essentially a for-loop:
+| _C_      | _Elisp_      |
+| ~x += y~ | ~(incf x y)~ |
+| ~x -= y~ | ~(decf x y)~ |
+
+~y~ is optional, and is 1 by default.
+#+end_parallel
+
+# dotimes is just a specfic while loop.
+# (insert (format "\n\n%s" (macroexpand '(dotimes (x l r) b))))
+
+Two instances of a while loop:
 #+BEGIN_SRC elisp
-(dotimes (x   ;; refers to current iteration, initally 0
-          n   ;; total number of iterations
-	  ret ;; optional: return value of the loop
-	 )
-  …body here, maybe mentioning x…  	 
-)
+;; Repeat body n times, where i is current iteration.
+(let ((result 0) (n 100))
+  (dotimes (i (1+ n) result) (incf result i)))
 
-;; E.g., sum of first n numbers
-(let ((sum 0) (n 100))
-  (dotimes (i (1+ n) sum) (setq sum (+ sum i))))
+;; A for-each loop: Iterate through the list [0..100].
+(let ((result 0) (mylist (number-sequence 0 100)))
+  (dolist (e mylist result) (incf result e)))
 #+END_SRC
 
-A for-each loop: Iterate through a list.
-Like ~dotimes~, the final item is the expression value at the end of the loop.
-#+BEGIN_SRC elisp
-(dolist (elem '("a" 23 'woah-there) nil)
-  (message (format "%s" elem))
-  (sleep-for 0 500)
-)
-#+END_SRC
+In both loops, ~result~ is optional and defaults to nil.
+It is the return value of the loop expression.
 
-~(describe-symbol 'sleep-for)~ ;-)
-
-\newpage
 *Example of Above Constructs*
 #+BEGIN_SRC emacs-lisp
 (defun my/cool-function (N D)
@@ -531,9 +706,12 @@ Like ~dotimes~, the final item is the expression value at the end of the loop.
           (catch 'continue
             (incf counter)
             (cond
-              ((equal counter N)     (throw 'break sum))
-              ((zerop (% counter D)) (throw 'continue nil))
-    	      ('otherwise            (incf sum counter))
+              ((equal counter N)               
+                  (throw 'break sum))
+              ((zerop (% counter D))           
+                  (throw 'continue nil))
+              ('otherwise
+	          (incf sum counter))
               )))))))
 
 (my/cool-function  100 3)  ;; ⇒ 3267
@@ -541,44 +719,86 @@ Like ~dotimes~, the final item is the expression value at the end of the loop.
 (my/cool-function -100 7)  ;; ⇒ 0
 #+END_SRC
 
-Note that we could have had a final redundant ~throw 'return~:
-Redundant since the final expression in a block is its return value.
-
-\room
-
-The special ~loop~ constructs provide immensely many options to form
+The special [[http://www.gigamonkeys.com/book/loop-for-black-belts.html][loop]] construct provides immensely many options to form
 nearly any kind of imperative loop. E.g., Python-style ‘downfrom’ for-loops
 and Java do-while loops. I personally prefer functional programming, so wont
 look into this much.
 
-* Records
+* Types & Overloading
 
-#+BEGIN_SRC elisp
-(defstruct X "Record with fields fᵢ having defaults dᵢ" 
-  (f₀ d₀) ⋯ (fₖ dₖ))
+Since Lisp is dynamically typed, a variable can have any kind of data, possibly
+different kinds if data at different times in running a program.
+We can use ~type-of~ to get the type of a given value; suffixing that with ~p~
+gives the associated predicate; e.g., ~function ↦ functionp~.
+:More:
+The following predicates tell us what kind of data a variable
+has: ~numberp, arrayp, characterp,~
+~consp, functionp, hash-tablep, listp, stringp, and symbolp~.
+:End:
 
-;; Automatic constructor is “make-X” with keyword parameters for 
-;; initialising any subset of the fields!
-;; Hence (expt 2 (1+ k)) kinds of possible constructor combinations!
-(make-X :f₀ val₀ :f₁ val₁ ⋯ :fₖ valₖ) ;; Any, or all, fᵢ may be omitted
+:Details:
+Using these we can write functions that behave differently according to the types of
+their arguments. However this sort of ad hoc polymorphism can be slow and difficult to
+maintain when new types need to be considered. Instead, we could create overloaded
+methods using the defmethod command: Lisp decides which one to use by considering the
+types, hence the types of each declaration need to differ in at least one argument.
+:End:
 
-;; Automatic runtime predicate for the new type.
-(X-p (make-X)) ;; ⇒ true
-(X-p 'nope)    ;; ⇒ nil
+:Try_it_out:
+#+BEGIN_SRC emacs-lisp
+(type-of 3)        ;; integer
+(type-of "3")      ;; string
+(type-of 'x)       ;; symbol
+(type-of '(x . y)) ;; cons
+(type-of nil)      ;; symbol
+(type-of '(1 2 3)) ;; cons
+(type-of [1 2 3])  ;; vector
+#+END_SRC
+:End:
 
-;; Field accessors “X-fᵢ” take an X record and yield its value.
+#+BEGIN_SRC emacs-lisp
+;; Difficult to maintain as more types are added.
+(defun sad-add (a b)
+  (if (and (numberp a) (numberp b))    
+      (+ a b)
+      (format "%s + %s" a b))  
+)
 
-;; Field update: (setf (X-fᵢ x) valᵢ)
+(sad-add 2 3)       ;; ⇒ 5 
+(sad-add 'nice "3") ;; ⇒ "nice + 3"
 
-(defstruct book
-  title  (year  0))
+;; Better: Seperation of concerns.
+;;
+(cl-defmethod add ((a number) (b number)) (+ a b))      ;; number types 
+(cl-defmethod add ((a t) (b t)) (format "%s + %s" a b)) ;; catchall types
 
-(setq ladm (make-book :title "Logical Approach to Discrete Math" :year 1993))
-(book-title ladm) ;; ⇒ "Logical Approach to Discrete Math"
-(setf (book-title ladm) "LADM")
-(book-title ladm) ;; ⇒ "LADM"
+(add 2 3)       ;; ⇒ 5 
+(add 'nice "3") ;; ⇒ "nice + 3"
 #+END_SRC
 
+While list specific functions like list-length and mapcar may be more efficient than
+generic functions, which require extra type checking, the generic ones are easier to
+remember. The following generic functions work on lists, arrays, and strings:
++ ~find-if~, gets first value satisfying a predicate.
++ ~count~, finds how often an element appears in a sequence
++ ~position~, finds the index of a given element.
++ ~some~, check if any element satisfies a given predicate
++ ~every~, check if every element satisfies the given predicate
++ ~reduce~, takes a binary operation and a sequence and mimics a for-loop.
+  Use keyword ~:initial-value~ to specify the starting value, otherwise use head of
+  sequence.
++ ~sum~, add all numbers; crash for strings.
++ ~length, subseq, sort~.
+:More:
++ ~map~, like ~mapcar~ but works for any sequence with the added ability to transform
+  sequences to other types: Its first argument could be ~'list~ even if we operate in a
+  string, so that the list is converted after the operation is mapped.
++ ~subseq~, yields subsequence according to given indices.
++ ~sort~, takes an ordering relation and sorts according to it.
+:End:
+
+* spacing  newpage                                          :ignore:
+\newpage
 * Macros
 
   Macros let us add new syntax, like ~let1~ for single lets:
@@ -662,8 +882,6 @@ look into this much.
        # Woah!
   
 + ~macroexpand~ takes /code/ and expands any macros in it. It's useful in debugging macros.
-  
-  #  \room
   The above ‘equations’ can be checked by running ~macroexpand~; \newline e.g.,
   ~(when c s₀ ⋯ sₙ) ≈ (if c (progn s₀ ⋯ sₙ) nil)~ holds since:
 
@@ -747,7 +965,7 @@ look into this much.
 #+END_SRC
 :End:
 
-* COMMENT Macros :old_notes:
+* COMMENT Macros                                                  :old_notes:
 + Sometimes we don't want eager evaluation; i.e., we do not want to
   recursively evaluate arguments before running a function.
 + /Macros/ let us manipulate a program's abstract syntax tree, usually
@@ -819,14 +1037,31 @@ is initialised with org-mode.
 * spacing vfill                                                     :ignore:
 \vfill
 
-* Reads
+* COMMENT Printing
 
-+ [[http://sachachua.com/blog/wp-content/uploads/2013/05/How-to-Learn-Emacs-v2-Large.png][How to Learn Emacs: A Hand-drawn One-pager for Beginners / A visual tutorial]]
-+ [[https://emacs-doctor.com/learn-emacs-lisp-in-15-minutes.html][Learn Emacs Lisp in 15 minutes]] --- https://learnxinyminutes.com/
-+ [[https://www.gnu.org/software/emacs/manual/html_node/eintr/index.html#Top][An Introduction to Programming in Emacs Lisp]]  
-+ [[https://www.gnu.org/software/emacs/manual/html_node/elisp/index.html#Top][GNU Emacs Lisp Reference Manual]]
-+ [[http://landoflisp.com/][Land of Lisp]]
-  
+  Lisp makes writing a REPL astonishingly easy: “Loop as follows: Print the result
+  of evaluating what is read at the prompt.”
+#+BEGIN_SRC emacs-lisp
+  (loop (print (eval (read))))  ;; Beautiful (•̀ᴗ•́)و
+
+  (defun my-safe-repl () ;; Run repl until user types “quit”.
+   (let ((cmd (read)))
+     (unless (equal cmd 'quit)
+       (print (eval cmd))
+       (my-safe-repl))
+   ))
+#+END_SRC
+
+ + ~loop~ merely loops forever.
+ + The ~print~ and ~read~ commands work on all kinds of data, such as lists of data
+   structures. Hence, we must use quotes if we want to read a string rather than a
+   symbol, for example.
+ + They operate at the console level and are honest inverses of each other.
+ 
+#+BEGIN_SRC emacs-lisp
+(insert (read))
+#+END_SRC
+ 
 * COMMENT Making README.md
 
 C-c C-c: Evaluate src block.
