Removing the red box that appears in "minted" when using unicode.

--- a/CheatSheet.org
+++ b/CheatSheet.org
@@ -42,6 +42,14 @@
  }
 #+END_EXPORT
 
+# Removing the red box that appears in "minted" when using unicode.
+# Src: https://tex.stackexchange.com/questions/343494/minted-red-box-around-greek-characters
+#
+#+LATEX_HEADER: \makeatletter
+#+LATEX_HEADER: \AtBeginEnvironment{minted}{\dontdofcolorbox}
+#+LATEX_HEADER: \def\dontdofcolorbox{\renewcommand\fcolorbox[4][]{##4}}
+#+LATEX_HEADER: \makeatother
+
 * Intro :ignore:
 /Everything is a list!/
 
